--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Save order</title>
+  <link th:replace="~{general.html :: top-styles}">
   <link th:replace="~{general.html :: b-css}">
   <link th:replace="~{general.html :: fa-css}">
   <script th:replace="~{general.html :: b-js}"></script>
-  <style>
-    .error {
-      color: red;
-    }
-  </style>
 </head>
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
