Added responsive table

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
-<div class="container-sm">
+<div class="container-lg">
     <div>
         <a class="btn btn-outline-primary btn-sm" href="/add-order">Add order</a>
         <a class="btn btn-outline-primary btn-sm" href="/service-types">Service types</a>
@@ -30,7 +30,7 @@
             </div>
         </form>
     </div>
-    <div>
+    <div class="table-responsive">
         <table class="table table-hover border">
             <thead>
                 <tr>
