--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employees</title>
     <link th:replace="~{general.html :: b-css}">
     <link th:replace="~{general.html :: fa-css}">
@@ -10,12 +11,12 @@
 </head>
 <body>
 <div th:replace="~{general.html :: navbar}"></div>
-<div class="container">
+<div class="container-lg">
     <div class="mb-3">
         <a class="btn btn-outline-primary btn-sm" href="/add-employee">Add employee</a>
         <a class="btn btn-outline-primary btn-sm" href="/roles">Roles</a>
     </div>
-    <div>
+    <div class="table-responsive">
         <table class="table table-hover border">
             <thead class="table-light">
                 <tr>
