--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -34,13 +34,13 @@
             <div class="input-group mb-3">
               <input type="text" class="form-control" th:id="field-+${serviceType.id}" name="name" th:value="${serviceType.name}"
                      disabled>
-              <a class="btn btn-outline-success" type="button" th:attr="onclick=|openUpdate('${serviceType.id}')|">
-                <i class="fa-solid fa-pen-to-square"></i> Update</a>
-              <a th:id="field-+${serviceType.id}+-close" class="btn btn-outline-danger" type="button" style="display:none"
-                 th:attr="onclick=|closeUpdate('${serviceType.id}')|">X</a>
-              <a class="btn btn-outline-danger" type="button"
-                 th:attr="onclick=|confirmDelete('/delete-service-type?id=${serviceType.id}')|" href="#">
-                <i class="fa-sharp fa-solid fa-trash"></i> Delete</a>
+              <button class="btn btn-outline-success" th:attr="onclick=|openUpdate('${serviceType.id}')|">
+                <i class="fa-solid fa-pen-to-square"></i> Update</button>
+              <button th:id="field-+${serviceType.id}+-close" class="btn btn-outline-danger" style="display:none"
+                 th:attr="onclick=|closeUpdate('${serviceType.id}')|">X</button>
+              <button class="btn btn-outline-danger"
+                 th:attr="onclick=|confirmDelete('/delete-service-type?id=${serviceType.id}')|">
+                <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
             </div>
             </form>
           </td>
