--- a/src/main/resources/templates/employee/save-emp-info.html
+++ b/src/main/resources/templates/employee/save-emp-info.html
@@ -3,38 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Save employee</title>
-  <style>
-    .error {
-      color: red;
-    }
-  </style>
+  <link th:replace="~{general.html :: top-styles}">
+  <link th:replace="~{general.html :: b-css}">
+  <link th:replace="~{general.html :: fa-css}">
+  <script th:replace="~{general.html :: top-js}"></script>
+  <script th:replace="~{general.html :: b-js}"></script>
 </head>
 <body>
-<div th:insert="~{general.html :: navbar}"></div>
-<form action="#" th:action="@{/save-emp-info}" th:object="${employee}" method="post">
-  <input type="hidden" th:field="*{employeeId}">
-  <label>FullName: <input type="text" th:field="*{fullName}"></label> <br>
-  <p th:if="${#fields.hasErrors('fullName')}" th:errorclass="error" th:errors="*{fullName}"></p>
-  <label>PhoneNo: <input type="number" th:field="*{phoneNo}"></label> <br>
-  <p th:if="${#fields.hasErrors('phoneNo')}" th:errorclass="error" th:errors="*{phoneNo}"></p>
-  <label>Email address: <input type="email" th:field="*{emailAddress}"></label> <br>
-  <p th:if="${#fields.hasErrors('emailAddress')}" th:errorclass="error" th:errors="*{emailAddress}"></p>
-  <label>Role:
-    <select th:field="*{role}">
-      <option th:each="role : ${roles}"
-              th:value="${role.roleId}"
-              th:text="${role.name}"
-      ></option>
-    </select>
-    <a href="/add-role">Add new role</a>
-  </label> <br>
-  <label>Gender:
-    <input type="radio" th:field="*{gender}" th:value="Male"> Male
-    <input type="radio" th:field="*{gender}" th:value="Female"> Female
-  </label> <br>
-  <p th:if="${#fields.hasErrors('gender')}" th:errorclass="error" th:errors="*{gender}"></p>
-  <input type="submit" value="save">
-</form>
-<a style="cursor: pointer; color: blue" href="/employees">Back</a>
+<div th:replace="~{general.html :: navbar}"></div>
+<div class="container d-flex justify-content-center">
+  <div class="row g-3 d-flex flex-column align-items-center">
+    <div class="col-lg-8 border p-3">
+      <div>
+        <h2 class="text-center mb-3">Save employee info</h2>
+      </div>
+      <div>
+        <form class="row g-3" action="#" th:action="@{/save-emp-info}" th:object="${employee}" method="post">
+          <input type="hidden" th:field="*{employeeId}">
+          <div class="col-md-6 form-floating mb-3">
+            <input type="text" class="form-control" id="fullName" th:field="*{fullName}" placeholder="Venkatappa Raju">
+            <label for="fullName">Full name</label>
+            <p th:if="${#fields.hasErrors('fullName')}" th:errorclass="error" th:errors="*{fullName}"></p>
+          </div>
+          <div class="col-md-6 form-floating mb-3">
+            <input type="number" class="form-control" id="phoneNumber" placeholder="9848032919" th:field="*{phoneNo}">
+            <label for="phoneNumber">Phone number</label>
+            <p th:if="${#fields.hasErrors('phoneNo')}" th:errorclass="error" th:errors="*{phoneNo}"></p>
+          </div>
+          <div class="col-md-12 form-floating mb-3">
+            <input type="email" class="form-control" id="emailAddress" placeholder="venkatapparaju@email.com" th:field="*{emailAddress}">
+            <label for="emailAddress">Email address</label>
+            <p th:if="${#fields.hasErrors('emailAddress')}" th:errorclass="error" th:errors="*{emailAddress}"></p>
+          </div>
+          <div class="col-md-8">
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="select-role">Role</label>
+              <select class="form-select" id="select-role" th:field="*{role}">
+                <option th:each="role : ${roles}"
+                        th:value="${role.roleId}"
+                        th:text="${role.name}"
+                ></option>
+              </select>
+              <a class="btn btn-outline-primary" href="/add-role" role="button">Add new role</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <input type="radio" class="btn-check" id="male-gender" th:field="*{gender}" th:value="Male" checked>
+            <label class="btn btn-outline-primary" for="male-gender"><i class="fa-solid fa-mars"></i> Male</label>
+            <input type="radio" class="btn-check" id="female-gender" th:field="*{gender}" th:value="Female">
+            <label class="btn btn-outline-primary" for="female-gender"><i class="fa-solid fa-venus"></i> Female</label>
+            <p th:if="${#fields.hasErrors('gender')}" th:errorclass="error" th:errors="*{gender}"></p>
+          </div>
+          <div>
+            <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+            <a class="btn btn-outline-danger" href="/employees"><i class="fa-solid fa-ban"></i> Cancel</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
