--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Orders</title>
-    <link th:replace="~{general.html :: b-css}">
-    <link th:replace="~{general.html :: fa-css}">
-    <script th:replace="~{general.html :: top-js}"></script>
-    <script th:replace="~{general.html :: b-js}"></script>
+    <link th:replace="~{frags/general-frags.html :: b-css}">
+    <link th:replace="~{frags/general-frags.html :: fa-css}">
+    <script th:replace="~{frags/general-frags.html :: top-js}"></script>
+    <script th:replace="~{frags/general-frags.html :: b-js}"></script>
 </head>
 <body>
-<div th:replace="~{general.html :: navbar}"></div>
+<div th:replace="~{frags/general-frags.html :: navbar}"></div>
 <div class="container-lg">
     <div>
         <a class="btn btn-outline-primary btn-sm" href="/add-order">Add order</a>
