--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employees</title>
-    <link th:replace="~{general.html :: b-css}">
-    <link th:replace="~{general.html :: fa-css}">
-    <script th:replace="~{general.html :: top-js}"></script>
-    <script th:replace="~{general.html :: b-js}"></script>
+    <link th:replace="~{frags/general-frags.html :: b-css}">
+    <link th:replace="~{frags/general-frags.html :: fa-css}">
+    <script th:replace="~{frags/general-frags.html :: top-js}"></script>
+    <script th:replace="~{frags/general-frags.html :: b-js}"></script>
 </head>
 <body>
-<div th:replace="~{general.html :: navbar}"></div>
+<div th:replace="~{frags/general-frags.html :: navbar}"></div>
 <div class="container-lg">
     <div class="mb-3">
         <a class="btn btn-outline-primary btn-sm" href="/add-employee">Add employee</a>
