--- a/src/main/resources/templates/employee/save-emp-info.html
+++ b/src/main/resources/templates/employee/save-emp-info.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Save employee info</title>
-  <link th:replace="~{general.html :: top-styles}">
-  <link th:replace="~{general.html :: b-css}">
-  <link th:replace="~{general.html :: fa-css}">
-  <script th:replace="~{general.html :: top-js}"></script>
-  <script th:replace="~{general.html :: b-js}"></script>
+  <link th:replace="~{frags/general-frags.html :: top-styles}">
+  <link th:replace="~{frags/general-frags.html :: b-css}">
+  <link th:replace="~{frags/general-frags.html :: fa-css}">
+  <script th:replace="~{frags/general-frags.html :: top-js}"></script>
+  <script th:replace="~{frags/general-frags.html :: b-js}"></script>
 </head>
 <body>
-<div th:replace="~{general.html :: navbar}"></div>
+<div th:replace="~{frags/general-frags.html :: navbar}"></div>
 <div class="container d-flex justify-content-center">
   <div class="row g-3 d-flex flex-column align-items-center">
     <div class="col-lg-8 border p-3">
